@@ -1,3 +1,9 @@
+Wed May 10 17:00:01 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
+
+	* .Sanitize (Things-to-keep): Add sample.exp
+
+	* sample.exp: Added sample client/server tests.
+
 Sat May  6 17:12:37 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
 
 	* standalone.exp: klist test - added new line to prevent an OSF/1
